--- a/xperiences/templates/base.html
+++ b/xperiences/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<link rel="stylesheet" href="{{ MEDIA_URL }}css/reset.css" type="text/css" media="screen, print" /> 
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/reset.css" type="text/css" media="screen, print" />
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" media="screen, print" />
 <!--script src="{{ MEDIA_URL }}js/lib/jquery-1.7.min.js"></script-->
 <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
@@ -58,8 +58,8 @@
             <div id="main-nav">
                 <ul>
                     {% for cat in categories %}
-                        <li {% if category == cat %}id="selected"{% endif %}>
-                            <a href="{% url experiences.views.experience_by_category category=cat%}">{{ cat }}</a>
+                        <li {% if category.0 == cat %}id="selected"{% endif %}>
+                            <a href="{% url experiences.views.experience_by_category category=cat.0%}">{{ cat.0 }}</a>
                         </li>
                     {% endfor %}
                 </ul>
@@ -67,9 +67,9 @@
         </div>
     </header>
     {% endblock %}<!-- close header -->
-    
+
     <div id="wrapper">
-        <div id="content">{% block content %}This is the body for now{% endblock %}</div>   
+        <div id="content">{% block content %}This is the body for now{% endblock %}</div>
     </div>
 
     <!-- footer -->
@@ -92,7 +92,7 @@
                 </li>-->
                 <li>
                     <a title="Contact" href="#">Contact</a>
-                </li>                      
+                </li>
             </ul>
         </div>
     </footer>{% endblock %}
@@ -100,9 +100,8 @@
         {% block hidden_templates %}
         {% endblock %}
     </div>
-</body>    
+</body>
 </html>
 
- 
-        
-        
+
+
